# LexNebulis

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  legalforge.sh  lexnebulis.sh
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_conflict_checking.py  003_task_management.py  004_two_factor_auth.py  005_client_portal.py  006_document_templates.py  007_deadline_calendaring.py  008_client_intake.py  009_ledes_billing.py  010_esignature.py  011_sso.py  012_email_integration.py  013_payment_processing.py  014_accounting_integration.py  015_saml_fields.py  016_webauthn.py  017_siem_config.py  018_cloud_storage.py  019_scim.py
backend/app/: celery_app.py  config.py  database.py  dependencies.py  main.py  middleware.py
backend/app/accounting/: models.py  router.py  schemas.py  service.py
backend/app/admin/: __init__.py  models.py  router.py  schemas.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/billing/: models.py  router.py  schemas.py  service.py
backend/app/calendar/: models.py  router.py  schemas.py  service.py
backend/app/clients/: models.py  router.py  schemas.py  service.py
backend/app/cloud_storage/: celery_tasks.py  models.py  router.py  schemas.py  service.py
backend/app/common/: access_control.py  audit.py  base_models.py  celery_tasks.py  encryption.py  (+3 more)
backend/scripts/: entrypoint-backend.sh
backend/tests/: conftest.py  test_access_control.py  test_audit.py  test_auth.py  test_auth_hardening.py  test_billing.py  test_clients.py  test_common.py  test_encryption.py  test_exception_handler.py  test_health.py  test_matters.py  test_rate_limit.py  test_sso_jwt.py  test_sso_state.py  test_trust.py
(+177 files in other folders)
