[project]
name = "lexnebulis-backend"
version = "1.0.0"
description = "LexNebulis - Self-hosted legal practice management platform"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5",
    "python-multipart>=0.0.12",
    "minio>=7.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "weasyprint>=63.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "jellyfish>=1.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4",
    "docxtpl>=0.18.0",
    "python-docx>=1.1.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "faker>=33.0",
    "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=10"

[tool.coverage.run]
source = ["app"]
omit = ["app/celery_app.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
